# ExperimentDatabasePopulator

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Jenkinsfile  README.md  create_rb_number_populator_python_venv.sh  main.py  main.pyw  pyproject.toml  rb_number_populator.sh  requirements.txt  ruff.toml  run_tests.py  start_expdata.bat  start_expdata.sh  start_expdata_py.bat
.github/workflows/: Lint-and-test.yml
DatabaseController/: main.py  main.pyw
DatabaseController/ExperimentData/: __init__.py  database_model.py  populator.py  rbtablesupdater.py  webservices_reader.py  webservicesreader.py
DatabaseController/tests/: populator_tests.py  webservices_reader_tests.py  webservices_test_data.py  webservicesreader_test.py  webservicestestdata.py
exp_db_populator/: cli.py  data_types.py  database_model.py  gatherer.py  main.py  populator.py  userdata.py  webservices_reader.py  webservices_test_data.py
tests/: data_types_tests.py  main_tests.py  populator_tests.py  system_test.py  test_data_types.py  test_gatherer.py  test_main.py  test_populator.py  test_webservices_reader.py  userdata_tests.py  webservices_reader_tests.py  webservices_test_data.py
